# Hikkaduwa

./: README.md  dev-requirements.txt  install.sh  pyproject.toml  qr.LICENSE  requirements.txt  termux.sh
hikka/: __main__.py  _internal.py  _local_storage.py  _pip.py  _reference_finder.py  client.py  configurator.py  database.py  dispatcher.py  features.py  hints.py  loader.py  log.py  main.py  platform.py  pointers.py  qr.py  tl_cache.py  translations.py  types.py  utils.py  validators.py  version.py
hikka/compat/: dragon.py
hikka/inline/: bot_pm.py  core.py  events.py  form.py  gallery.py  list.py  query_gallery.py  token_obtainment.py  types.py  utils.py
hikka/langpacks/: en.yml
hikka/modules/: api_protection.py  eval.py  help.py  hikka_backup.py  hikka_config.py  hikka_info.py  hikka_security.py  hikka_settings.py  inline_stuff.py  loader.py  quickstart.py  settings.py  terminal.py  test.py  translations.py  updater.py
hikka/web/: core.py  proxypass.py  root.py
