[project]
name = "hikkaduwa"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "aiogram==3.29.1",
    "aiohttp==3.14.1",
    "asyncstdlib>=3.14.0",
    "emoji==2.15.0",
    "grapheme==0.6.0",
    "kurigram @ git+https://github.com/KurimuzonAkuma/kurigram.git@11439f3",
    "meval==2.5",
    "orjson==3.11.9",
    "psutil==7.2.2",
    "requests==2.34.2",
    "ruamel-yaml==0.19.1",
    "tgcrypto==1.2.5",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
    "pyrefly>=1.1.1",
]
